126088809 - Additional enhancements for search result view toggle.  Moved view toggle and sort options to sub-header bar for medium and large screens, moved grouping to body for small and extra small screens to replace 'Search Results' heading, heading remains on larger screens. Added 'Relevance' sort option which resets page to original sort. Added link to image so user can click to open a tab with original image, need to test on mobile app. Modified width of image container to better space image and item detail content on smaller screens, changed from 50% width to 45%.  Outstanding issue is getting replacement item icon to show, appears to not be sent in the item response for search results.

--- a/KeithLink/KeithLink.Web.Presentation/angular-app/app/styles/pages/_search-results.scss
+++ b/KeithLink/KeithLink.Web.Presentation/angular-app/app/styles/pages/_search-results.scss
@@ -265,7 +265,7 @@
 
 .search-result-image-container { 
   padding-top:15px;
-  width:50%;
+  width:45%;
   text-align:center;
 }
 
